--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
                 <div class="logo-icon">
                     <i class="fas fa-shield-alt"></i>
                 </div>
-                <h1 class="project-title">Белая<br><span class="project-subtitle">Русь</span></h1>
+                <div class="project-title-container">
+                    <h1 class="project-title-line">Белая</h1>
+                    <h1 class="project-title-line">Русь</h1>
+                </div>
             </div>
             
             <h1 class="welcome-title" id="animated-text">Добро пожаловать в переходник проекта "Белая Русь"</h1>
@@ -37,10 +40,6 @@
                 <a href="https://t.me/Belairus" target="_blank" class="btn btn-primary">
                     <i class="fab fa-telegram"></i> Перейти в проект
                 </a>
-            </div>
-            
-            <div class="scroll-indicator">
-                <i class="fas fa-chevron-down"></i>
             </div>
         </div>
     </section>
