--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <section id="screen1" class="screen active">
         <div class="screen-content">
             <div class="logo-container">
-                <div class="logo-icon">
-                    <i class="fas fa-shield-alt"></i>
+                <div class="logo-image">
+                    <img src="https://i.ibb.co/zhMvd6Nd/photo-2024-12-02-21-45-30.jpg" alt="Белая Русь" class="logo-img">
                 </div>
                 <div class="project-title-container">
                     <h1 class="project-title-line">Белая</h1>
@@ -37,7 +37,7 @@
                 <button id="aboutOwner" class="btn btn-secondary">
                     <i class="fas fa-user"></i> О владельце
                 </button>
-                <a href="https://t.me/Belairus" target="_blank" class="btn btn-primary">
+                <a href="https://t.me/belairys" target="_blank" class="btn btn-primary">
                     <i class="fab fa-telegram"></i> Перейти в проект
                 </a>
             </div>
@@ -54,10 +54,9 @@
             <div class="owner-info">
                 <div class="owner-header">
                     <div class="owner-photo-container">
-                        <div class="photo-placeholder">
-                            <i class="fas fa-user-secret"></i>
+                        <div class="owner-photo">
+                            <img src="https://i.ibb.co/KxqTYrsw/photo-2024-12-02-21-45-30.jpg" alt="Фото профиля" class="profile-img">
                         </div>
-                        <div class="photo-note">Фото будет добавлено позже</div>
                     </div>
                     <h1 class="owner-title">OSINT & Киберразведка</h1>
                     <p class="owner-subtitle">Профессиональный специалист</p>
