--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
                             <img src="https://i.ibb.co/KxqTYrsw/photo-2024-12-02-21-45-30.jpg" alt="Фото профиля" class="profile-img">
                         </div>
                     </div>
-                    <h1 class="owner-title">OSINT & Киберразведка</h1>
+                    <h1 class="owner-title">Шпулька (@osinteg)</h1>
                     <p class="owner-subtitle">Профессиональный специалист</p>
                 </div>
                 
                 <div class="owner-description">
                     <div class="description-section">
                         <h3><i class="fas fa-user-tie"></i> Профессиональный профиль</h3>
-                        <p>Эксперт в области OSINT (Open Source Intelligence) и киберразведки с многолетним опытом работы. Специализируюсь на сборе, анализе и интерпретации информации из открытых источников для решения комплексных задач в сфере кибербезопасности и расследований.</p>
+                        <p>Эксперт в области OSINT (Open Source Intelligence) и кибер-разведки с многолетним опытом работы. Специализируюсь на сборе, анализе и интерпретации информации из открытых источников для решения комплексных задач в сфере кибербезопасности и расследований.</p>
                     </div>
                     
                     <div class="description-section">
@@ -73,7 +73,7 @@
                         <ul class="skills-list">
                             <li><i class="fas fa-search"></i> Полноценные OSINT-расследования</li>
                             <li><i class="fas fa-network-wired"></i> Анализ цифровых следов и активностей</li>
-                            <li><i class="fas fa-shield-alt"></i> Киберразведка и оценка угроз</li>
+                            <li><i class="fas fa-shield-alt"></i> Кибер-разведка и оценка угроз</li>
                             <li><i class="fas fa-chart-line"></i> Мониторинг и анализ информации</li>
                             <li><i class="fas fa-user-shield"></i> Консультации по цифровой безопасности</li>
                             <li><i class="fas fa-clipboard-check"></i> Верификация информации и факт-чекинг</li>
