--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <p>© 2025 Проект "Белая Русь". Все права защищены.</p>
             <p class="github-link">
                 <i class="fab fa-github"></i> Репозиторий на 
-                <a href="https://github.com/userage997/osinteg" target="_blank">GitHub</a>
+                <a href="https://userage997.github.io/osinteg/" target="_blank">GitHub</a>
             </p>
         </div>
     </footer>
